test: Make the piglit-running script callable with an arbitrary server.
v2: Check that SERVER_COMMAND is set.

Signed-off-by: Eric Anholt <eric@anholt.net>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -163,6 +163,7 @@ endif
 EXTRA_DIST = \
 	$(SCRIPT_TESTS) \
 	scripts/xinit-piglit-session.sh \
+	scripts/run-piglit.sh \
 	ddxstubs.c \
 	$(NULL)
 
