--- a/include/dix-config.h.in
+++ b/include/dix-config.h.in
@@ -3,7 +3,8 @@
 #ifndef _DIX_CONFIG_H_
 #define _DIX_CONFIG_H_
 
-#define XORG_EXPORT
+#define XORG_EXPORT __attribute__((section("xorgabi")))
+#define XORG_EXPORT_VAR __attribute__((section("xorgabivar")))
 
 /* Support BigRequests extension */
 #undef BIGREQS
