Fix linking xfree86 power management support
This is insanely ugly but it works. The problem is, none of the symbols
defined by xf86PM.c are referenced before libcommon.a is searched, but
likewide none of the symbols defined by the OS PM code are referenced by
the time libxorgos is searched. Just fold xf86PM into xf86Helper (which
does satisfy references by that point of the link) and move on.

The interface between the xf86 and os layers here is quite ugly and this
could probably be done more cleanly, should someone feel motivated.

Signed-off-by: Adam Jackson <ajax@redhat.com>

--- a/hw/xfree86/common/Makefile.am
+++ b/hw/xfree86/common/Makefile.am
@@ -41,7 +41,7 @@ libcommon_la_SOURCES = xf86Configure.c xf86Bus.c xf86Config.c \
                       xf86Events.c xf86Globals.c xf86AutoConfig.c \
                       xf86Option.c xf86Init.c \
                       xf86VidMode.c xf86fbman.c xf86cmap.c \
-                      xf86Helper.c xf86PM.c xf86Xinput.c xisb.c \
+                      xf86Helper.c xf86Xinput.c xisb.c \
                       xf86Mode.c xorgHelper.c xf86Extensions.h \
 		      xf86Extensions.c $(XF86VMODESOURCES) \
                       $(XVSOURCES) $(BUSSOURCES) $(RANDRSOURCES)
