Fix linking xfree86 xv support
Another ordering problem: xf86XVClipVideoHelper is needed by the randr
code, but nothing in xf86xv.o is referenced by the time we search
libcommon so it's not available for anything in libxf86modes. Split
xf86xv.o to its own little helper library and search it after the randr
code.

v2: Fix test linking (by anholt)

Signed-off-by: Adam Jackson <ajax@redhat.com>

--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -60,6 +60,7 @@ LOCAL_LIBS = \
             loader/libloader.la \
             parser/libxf86config.la \
             modes/libxf86modes.la \
+	    common/libxv.la \
             ramdac/libramdac.la \
             ddc/libddc.la \
             i2c/libi2c.la \
