meson: Fix xwayland build since xwayland-keyboard-grab.
The version detect was erroring out with 1.9 protos installed, and we
weren't building the new code.

Signed-off-by: Eric Anholt <eric@anholt.net>

--- a/hw/xwayland/meson.build
+++ b/hw/xwayland/meson.build
@@ -18,6 +18,7 @@ protodir = protocols_dep.get_pkgconfig_variable('pkgdatadir')
 pointer_xml = join_paths(protodir, 'unstable', 'pointer-constraints', 'pointer-constraints-unstable-v1.xml')
 relative_xml = join_paths(protodir, 'unstable', 'relative-pointer', 'relative-pointer-unstable-v1.xml')
 tablet_xml = join_paths(protodir, 'unstable', 'tablet', 'tablet-unstable-v2.xml')
+kbgrab_xml = join_paths(protodir, 'unstable', 'xwayland-keyboard-grab', 'xwayland-keyboard-grab-unstable-v1.xml')
 
 client_header = generator(scanner,
     output : '@BASENAME@-client-protocol.h',
@@ -30,9 +31,11 @@ code = generator(scanner,
 srcs += client_header.process(relative_xml)
 srcs += client_header.process(pointer_xml)
 srcs += client_header.process(tablet_xml)
+srcs += client_header.process(kbgrab_xml)
 srcs += code.process(relative_xml)
 srcs += code.process(pointer_xml)
 srcs += code.process(tablet_xml)
+srcs += code.process(kbgrab_xml)
 
 xwayland_glamor = []
 if gbm_dep.found()
