meson: Move Xvfb build under an option.
Autotools also had it as an option.

Signed-off-by: Eric Anholt <eric@anholt.net>

--- a/hw/meson.build
+++ b/hw/meson.build
@@ -6,7 +6,9 @@ if get_option('dmx')
     subdir('dmx')
 endif
 
-subdir('vfb')
+if get_option('xvfb')
+    subdir('vfb')
+endif
 
 if build_xnest
     subdir('xnest')
